# SignLanguague-Backend

./: .dockerignore  .env.example  .gitignore  CEP_sign_language.xlsx  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  example_data.txt  left_hand_api.ino  mongo-init.js  pyproject.toml  requirements.txt  right_hand_wifi.ino
app/: config.py  database.py  main.py
app/models/: sensor_data.py  sign_language.py
app/models_trained/: gesture_model_best_cnnlstm.pth  gesture_model_best_xgb.json  labels_map.json
app/routers/: data_collector.py  glove.py  sensor_data.py  sign_language.py  upload.py
app/schemas/: sensor_data.py  sign_language.py
app/services/: data_collector.py  minio_service.py  prediction_service.py  prediction_stream.py  sentence_buffer.py  sign_language_service.py  train_model.py
app/utils/: object_id.py
glove/left_hand_api/: left_hand_api.ino
glove/left_hand_serial/: left_hand_serial.ino
glove/right_hand_3_7/: right_hand_3_7.ino
glove/right_hand_api/: right_hand_api.ino
glove/right_hand_serial/: right_hand_serial.ino
glove/singleflex/: singleflex.ino
glove/test3/: test3.ino
glove/test_connecttion/: test_connecttion.ino
right_hand_api/: right_hand_api.ino
scripts/: create_raw_json.py  seed_sign_languages.py  serial_collector.py  update_api_leds.py
