[project]
name = "smart-glove-be"
version = "1.0.0"
description = "FastAPI backend for Smart Glove sign language recognition system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "motor>=3.6.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "numpy>=1.26.4",
    # ML
    "torch>=2.0.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    # Serial port (data collection)
    "pyserial>=3.5",
    # Excel (seed script)
    "openpyxl>=3.1.0",
    # MinIO (file storage)
    "minio>=7.2.0",
    # File upload
    "python-multipart>=0.0.6",
]

[project.scripts]
train = "app.services.train_model:train"

[dependency-groups]
dev = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
